--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?ikkliqx#1" target="_blank">首页</a> | <a href="https://d3uam2jhpjrvu5.cloudfront.net/1?uviyticd" target="_blank">动态网</a> | <a href="https://dl1ez95kskssm.cloudfront.net/2?xvuum" target="_blank">大纪元</a> | <a href="https://dhw62qyyxrv4n.cloudfront.net/4?yryirkdt" target="_blank">看中国</a> | <a href="https://d1znr9c9sm73cv.cloudfront.net/pHh5q?pooifpe" target="_blank">新生网</a> | <a href="https://d2cj9ah31kn8fl.cloudfront.net/tktpt?ffkvztzic" target="_blank">阿波罗网</a> | <a href="https://d2fq83y0z2h6n4.cloudfront.net/Mjpvu?gnsofadl" target="_blank">干净世界</a> | <a href="https://d1kgsi70b35buf.cloudfront.net/10?rzemlpkoe" target="_blank">退党服务</a> | <a href="https://d1q5zi9q4mpi9f.cloudfront.net/Rffqf?waqca" target="_blank">明慧广播</a> | <a href="https://dn3dhcszbgs9s.cloudfront.net/nw9Vn?wethdzysr" target="_blank">传奇时代</a> | <a href="https://d8jw662akk94j.cloudfront.net/AF9AG?pbzmjp" target="_blank">新境界影视</a> | <a href="https://dme0bxbvomkno.cloudfront.net/zqMQA?mufgzpwc" target="_blank">文昭谈论</a> | <a href="https://d1nvr7ffvd2d6n.cloudfront.net/7?bannvu" target="_blank">明慧</a></p><p><a href="https://d2esw86q58v8t7.cloudfront.net/9?acbicjn" target="_blank">大法</a> | <a href="https://dme0bxbvomkno.cloudfront.net/3?arobedr" target="_blank">新唐人</a> | <a href="https://d348xnvyypk4sr.cloudfront.net/obAhT?xzjyj" target="_blank">人民报</a> | <a href="https://d2b68ib2p4x8t6.cloudfront.net/xXNHu?bxxkpvy" target="_blank">放光明</a> | <a href="https://d2tkl2xkgbxyfv.cloudfront.net/5?phhoqro" target="_blank">新纪元</a> | <a href="https://d2cenl0crtmzsc.cloudfront.net/6?cvvpvxz" target="_blank">希望之声</a> | <a href="https://d3q99y09eaol9n.cloudfront.net/11?hohvuny" target="_blank">无界网络</a> | <a href="https://dtjix0ckmebpi.cloudfront.net/Pueji?xdbrdez" target="_blank">追查国际</a> | <a href="https://d3bo5docy69ast.cloudfront.net/16?nhvatxizy" target="_blank">明慧之窗</a> | <a href="https://d3d2r098q79b5l.cloudfront.net/LdvzZ?gsyrzo" target="_blank">细语人生</a> | <a href="https://d2rum6kyy1zd7y.cloudfront.net/fBn3r?osnsyv" target="_blank">新世纪影视</a> | <a href="https://d2zw89wk00y815.cloudfront.net/PUWMb?gahgwsoz" target="_blank">江峰时刻</a> | <a href="https://dhltq9qxjnmw2.cloudfront.net/8?mllqqax" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?nmevprhsj#1" target="_blank">首页</a> | <a href="https://dmepc9x6zy689.cloudfront.net/1?wvynd" target="_blank">动态网</a> | <a href="https://d2esw86q58v8t7.cloudfront.net/2?zqmzrn" target="_blank">大纪元</a> | <a href="https://dl1ez95kskssm.cloudfront.net/4?yffawus" target="_blank">看中国</a> | <a href="https://dsqxb3b7muii1.cloudfront.net/pHh5q?ogazqzx" target="_blank">新生网</a> | <a href="https://d2ktwgchvgcnzd.cloudfront.net/tktpt?wjxzsmfd" target="_blank">阿波罗网</a> | <a href="https://d1205lb7lnyr8t.cloudfront.net/Mjpvu?vzapgemvf" target="_blank">干净世界</a> | <a href="https://dfxrfb9070id6.cloudfront.net/10?wxjnie" target="_blank">退党服务</a> | <a href="https://d2s9nucg9xc8yr.cloudfront.net/Rffqf?nuctnmnhz" target="_blank">明慧广播</a> | <a href="https://d1or6b2roqil0x.cloudfront.net/nw9Vn?thooopfc" target="_blank">传奇时代</a> | <a href="https://d239x61949z6p.cloudfront.net/AF9AG?dymmud" target="_blank">新境界影视</a> | <a href="https://duxu97yt14q37.cloudfront.net/zqMQA?rrmytbz" target="_blank">文昭谈论</a> | <a href="https://dtfavhq5d1ym2.cloudfront.net/7?wajjs" target="_blank">明慧</a></p><p><a href="https://d15m60lsma25jk.cloudfront.net/9?igswwcn" target="_blank">大法</a> | <a href="https://d2torrlf4djx10.cloudfront.net/3?fqzulvwy" target="_blank">新唐人</a> | <a href="https://d3dbj8b4dt94o2.cloudfront.net/obAhT?xvilqc" target="_blank">人民报</a> | <a href="https://d18bx7gz18d1cs.cloudfront.net/xXNHu?oogclyxb" target="_blank">放光明</a> | <a href="https://d3c3t179l61pwn.cloudfront.net/5?gnqcbsh" target="_blank">新纪元</a> | <a href="https://d3caox32lipp7h.cloudfront.net/6?uwwjy" target="_blank">希望之声</a> | <a href="https://doqmgyop4u892.cloudfront.net/11?tigbuvh" target="_blank">无界网络</a> | <a href="https://d1nvr7ffvd2d6n.cloudfront.net/Pueji?cskdotxaj" target="_blank">追查国际</a> | <a href="https://d2esw86q58v8t7.cloudfront.net/16?renqkc" target="_blank">明慧之窗</a> | <a href="https://d1205lb7lnyr8t.cloudfront.net/LdvzZ?ydygniy" target="_blank">细语人生</a> | <a href="https://d2zw89wk00y815.cloudfront.net/fBn3r?bxffn" target="_blank">新世纪影视</a> | <a href="https://dep6yudto3kbo.cloudfront.net/PUWMb?vgcbdb" target="_blank">江峰时刻</a> | <a href="https://doyvntponycdh.cloudfront.net/8?zionn" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274077.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/06/id14274093-53ff253f7b81fc4c77010a0776299cac-320x200.png"><p align="center">安徽黄山洪水冲走房屋车辆 多人失联</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274077.md#1" title="安徽黄山洪水冲走房屋车辆 多人失联""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14274093-53ff253f7b81fc4c77010a0776299cac-320x200.png">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273934.md#1" title="临近三中全会 上海访民遭严控 多人失联""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14273935-Unknown-320x200.jpeg">&nbsp;</a>
@@ -9,16 +9,16 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273679.md#1" title="钟原：中共军队政治会议再度枪口向内""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/03/id14197391-GettyImages-2051578461-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273849.md#1" title="广西漓江水倒灌桂林 主城区出现严重内涝""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14273851-8eed8dc460210786a22dee10f8fac69e-320x200.png">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273792.md#1" title="最吸引富豪移民的十国 美国第二加国第四""><img width="73" src="https://i.epochtimes.com/assets/uploads/2018/08/Fotolia_76617451_Subscription_L-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273494.md#1" title="【菁英论坛】缺钱缺疯了 中共向民企开刀""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14273706-1200-x-800-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273758.md#1" title="国际调查：中国人权状况恶劣 香港持续恶化""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/08/id14056115-17_000_1H127U-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273536.md#1" title="人民币兑俄卢布跌至1年多来最低 释何信号""><img width="73" src="https://i.epochtimes.com/assets/uploads/2007/01/70104150650789-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273137.md#1" title="中华传统武术亚太初赛55人入围 将赴美复赛""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14273616-240619162101100311-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>10分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274135.md#1">人民币兑美元汇率跌至去年11月以来新低</a><br>
-:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274077.md#1">安徽黄山洪水冲走房屋车辆 多人失联</a><br>
-:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274156.md#1">传美拟禁卡巴斯基杀毒软件销售 释何信号</a><br>
+:clock8: <em>2分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274239.md#1">“飞毛腿”恒星超高速奔跑 或将脱离银河系</a><br>
+:clock8: <em>5分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274142.md#1">荷兰首相吕特将成为北约下一任领导人</a><br>
+:clock8: <em>34分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274135.md#1">人民币兑美元汇率跌至去年11月以来新低</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274077.md#1">安徽黄山洪水冲走房屋车辆 多人失联</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274156.md#1">传美拟禁卡巴斯基杀毒软件销售 释何信号</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274048.md#1">青岛卓越世纪中心一女子跳楼 街道办通报引质疑</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274129.md#1">飞天艺术学院公告：澄清</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274075.md#1">欧盟首次针对俄罗斯天然气实施制裁</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273115.md#1">“拆墙运动”刘栋玲面临被遣返回中国危险</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272788.md#1">分析：普京访朝鲜 中共为何左右为难</a><br>
@@ -52,7 +52,6 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273834.md#1">大陆文章鼓励农民投资A股引网络炸锅 被下架</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14272178.md#1">中共鼓动公民同意捐献器官 专家警告小心</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273708.md#1">【时事金扫描】乌军攻克里米亚？普京访朝异常</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273494.md#1">【菁英论坛】缺钱缺疯了 中共向民企开刀</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273702.md#1">演唱会被投诉唱粤语歌 张学友：我来自香港</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273664.md#1">冷脸面对中共央视直播 女星周也被指踢到钢板</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14272933.md#1">【新闻大家谈】中共上调养老金 惹骂声一片</a><br>
@@ -98,13 +97,14 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270542.md#1">新西兰媒体揭中共秘密渗透 已持续几十年</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14269129.md#1">因为信仰遭中共囚禁的父亲们</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/15/n14270684.md#1">张晓明辞政协常委 被指搞乱香港仕途被终结</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d1ku3kz5m98oo2.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d1ku3kz5m98oo2.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d1ku3kz5m98oo2.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d1ku3kz5m98oo2.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d1ku3kz5m98oo2.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d1ku3kz5m98oo2.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d1ku3kz5m98oo2.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d1ku3kz5m98oo2.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d1ku3kz5m98oo2.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d1ku3kz5m98oo2.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d1ku3kz5m98oo2.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d1ku3kz5m98oo2.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d1ku3kz5m98oo2.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d1ku3kz5m98oo2.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d1ku3kz5m98oo2.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d1ku3kz5m98oo2.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d1ku3kz5m98oo2.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d1ku3kz5m98oo2.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d1ku3kz5m98oo2.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d1ku3kz5m98oo2.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d1ku3kz5m98oo2.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d1ku3kz5m98oo2.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d1ku3kz5m98oo2.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d1ku3kz5m98oo2.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d1ku3kz5m98oo2.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d1ku3kz5m98oo2.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 48,228</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270586.md#1">【菁英论坛】一线城市楼市也崩 上亿房主成负翁</a><br>
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://dxdn46auofl2r.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://dxdn46auofl2r.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://dxdn46auofl2r.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://dxdn46auofl2r.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://dxdn46auofl2r.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://dxdn46auofl2r.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://dxdn46auofl2r.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://dxdn46auofl2r.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://dxdn46auofl2r.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://dxdn46auofl2r.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://dxdn46auofl2r.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://dxdn46auofl2r.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://dxdn46auofl2r.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://dxdn46auofl2r.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://dxdn46auofl2r.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://dxdn46auofl2r.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://dxdn46auofl2r.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://dxdn46auofl2r.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://dxdn46auofl2r.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://dxdn46auofl2r.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://dxdn46auofl2r.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://dxdn46auofl2r.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://dxdn46auofl2r.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://dxdn46auofl2r.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://dxdn46auofl2r.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://dxdn46auofl2r.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 48,228</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 432,058,850 人
+!共 432,062,093 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274129.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274129.md#1">飞天艺术学院公告：澄清</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273164.md#1">黄雪琴王建兵遭中共判刑 洛杉矶华人集会抗议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272644.md#1">中领馆官员遮挡成蕾入镜 澳总理对李强喊话</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271665.md#1">安徽老农写信给泽连斯基表支持 遭连夜讯问</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/16/n14271059.md#1">儿子被判定脑死亡 母亲告武汉医院为器官害命</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270023.md#1">蒙河水库占承包林地 山东一村委截留赔偿款</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274135.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/02/id14190994-666821-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274135.md#1">人民币兑美元汇率跌至去年11月以来新低</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273791.md#1">纳斯达克加强审查中港企业IPO 防暴涨暴跌</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273691.md#1">比亚迪称被“恶意诋毁” 砸重金悬赏查证</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272914.md#1">小米SU7上市两个月 车主开始卖车</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273576.md#1">为何印度股市涨幅超纳指 中国股市萎靡不振</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273555.md#1">中国618电商节销售额首降 大学生：荷包已空</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274111.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/02/id13938058-GettyImages-1435835052-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274111.md#1">李希“打虎”比赵乐际翻倍 专家析内斗隐情</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274051.md#1">云南保山市长陈锐去世 上月底其父投案后被查</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273568.md#1">中共住建部前部长陈政高病亡 曾迫害法轮功</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273405.md#1">朝俄加深关系 中共为何小心翼翼“旁观”</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273402.md#1">中共核潜艇台海现踪 意外暴露军力调动走廊？</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273223.md#1">退休多年 江西省人大前副主任洪礼和被查</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274048.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14274079-b0a0ad65bace9f948a628984df5bceea-320x200.jpeg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274048.md#1">青岛卓越世纪中心一女子跳楼 街道办通报引质疑</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273247.md#1">广西洪水43.1万人受灾 桂林居民划船出行</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272902.md#1">科大讯飞38岁工程师猝死 引关注</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272560.md#1">福建暴雨致52万人受灾 客家第一祠坍塌</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272543.md#1">大连公交车失控撞向工行大门 现场画面曝光</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272359.md#1">质量造假 大陆20元乳胶枕被卖到上千元</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273823.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14273949-498591f6547e20ee776acb2454e5814f-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273823.md#1">开使馆车挡道惹议 亚太空合秘书长余琦拍片认错</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273821.md#1">成都住持与女主播开房遭勒索 案件现新进展</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273711.md#1">三退声明精选（2024/06/19）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273174.md#1">大陆连锁舞蹈机构跑路 受害者损失上万</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273023.md#1">内蒙古一村5人遇害 山西刑案前村支书被通缉</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272917.md#1">陆第一网红冯提莫癌症痊愈 自曝还有5种病</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268173.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14268174-11_id13734986-000_9UB6PT-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268173.md#1">中国学术界频造假 学者：像病毒在污染世界</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14266062.md#1">高考首日 新课标作文题被吐槽 海南未发条形码</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14265798.md#1">中国高考首用AI监控 被疑技术不完善恐有误判</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/6/n14265024.md#1">揭秘：中共利用加国大学培养军事科学家</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14263339.md#1">《64三十五年祭》作曲者：不曾褪色的使命</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/5/28/n14259194.md#1">造假风气蔓延至香港 陆生以假文凭入读港大</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/4/2/n14216942.md#1">【独家】和两任总理闹矛盾 习经济会突离场</a><br>
